sources/si-brochure/3.01/si-brochure-en.adoc
= The International System of Units (SI)
:docnumber: Brochure
:partnumber: 1
:edition: 9
:copyright-year: 2024
:revdate: 2024-08-28
:language: en
:draft: v3.01
:title-en: The International System of Units
:title-fr: Le Système international d’unités
:title-cover-en: The International System of Units (SI)
:title-cover-fr: Le Système international d’unités (SI)
:doctype: brochure
:committee-acronym: BIPM
:committee-en: International Bureau of Weights and Measures
:committee-fr: Bureau International des Poids et Mesures
:status: in-force
:si-aspect: full
:isbn: 978-92-822-2272-0
:imagesdir: images
:toclevels: 3
:mn-document-class: bipm
:mn-output-extensions: xml,html,pdf,rxl
:number-presentation-formula: default
:local-cache-only:
:data-uri-image:

////
include::sections-en/00-abstract.adoc[]

include::sections-en/00-preface.adoc[]

include::sections-en/01-introduction.adoc[]

include::sections-en/02-system-of-units.adoc[]

include::sections-en/03-multiples.adoc[]

include::sections-en/04-non-si-units.adoc[]

include::sections-en/05-unit-symbols.adoc[]

include::sections-en/99-bibliography.adoc[]

////

== Introduction

=== Subheader

U+25CB &#x25CB; and U+25E6 &#x25E6;, ...

[appendix]
== Decisions of the CGPM and the CIPM

include::sib-a1-en-body.adoc[leveloffset=+1]

////
include::sections-en/a2-important-units.adoc[]

include::sections-en/a3-photochemical.adoc[]

[appendix]
== Historical notes on the development of the International System of Units and its base units

include::sib-a4-en-body.adoc[leveloffset=+1]

include::sections-en/a5-sigles.adoc[]

////